--- a/web/css/articles-list.scss
+++ b/web/css/articles-list.scss
@@ -95,12 +95,13 @@
 
   .title{
     text-align: center;
+    margin-bottom: 20px;
       span {
         border-bottom: 2px solid $grey;
         font-size: 1.5em;
       }
   }
   .part1, .part2{
-
+    margin-top: 15px;
   }
 }
